add dev div to display position

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 </head>
 <body>
     <!-- Your HTML content here -->
+    <div id="myDiv">Initial content</div>
     <div id="map"></div>
     <audio id="audioPlayer"></audio>
     <!-- Leaflet JS -->
