--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 <body>
     <!-- Your HTML content here -->
-    <div id="myDiv">Initial content</div>
+    <!-- <div id="myDiv">Initial content</div> TODO: add for debug -->
     <div id="map"></div>
     <audio id="audioPlayer"></audio>
     <!-- Leaflet JS -->
