--- a/index.html
+++ b/index.html
@@ -24,14 +24,15 @@
 <body>
     <!-- Your HTML content here -->
     <select class="centered-select" id="itineraryDropdown">
-        <option value="" disabled selected>Itineraire ?</option>
-        <option value=1>Itinéraire 1</option>
+        <option value="" disabled selected>Que fait-on cher Mathis ?</option>
+        <option value=0>Un bon anniversaire ?</option>
     </select>
-    <div id="map"></div>
     <div id="myDiv">DEBUG</div>
+    <div id="map"></div>
     <audio id="audioPlayer"></audio>
     <!-- move the following div above the map div to show it for debug -->
     <!-- Leaflet JS -->
+
     <script type="module" src="./js/map.js"></script>
     <script type="module" src="./js/main.js"></script>
 </body>
