add itinerary royale

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <select class="centered-select" id="itineraryDropdown">
         <option value="" disabled selected>Que fait-on cher Mathis ?</option>
         <option value=0>Un bon anniversaire ?</option>
+        <option value=1>Un itinéraire royal ?</option>
     </select>
 
     <div id="map"></div>
