--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
         <option value="" disabled selected>Que fait-on cher Mathis ?</option>
         <option value=0>Un bon anniversaire ?</option>
         <option value=1>Un itinéraire royal ?</option>
+        <option value=2>Un itinéraire royal bis?</option>
     </select>
 
+    <div id="titlediv" style="background-color:blue">Ici</div>
     <div id="map"></div>
     <div id="myDiv">DEBUG</div>
     <audio id="audioPlayer"></audio>
