--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <option value="" disabled selected>Que fait-on cher Mathis ?</option>
         <option value=0>Un bon anniversaire ?</option>
         <option value=1>Un itinéraire royal ?</option>
+        <option value=2>Un itinéraire royal, la suite</option>
         <option value=-1>🧹 Supprimer l'historique 🧹</option>
     </select>
 
