--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <option value=0>Un bon anniversaire ?</option>
         <option value=1>Un itinéraire royal ?</option>
         <option value=2>Un itinéraire royal, la suite</option>
+        <option value=2>Un long tour du Bois de Vincennes</option>
         <option value=-1>🧹 Supprimer l'historique 🧹</option>
     </select>
 
